# RAG-Based-Technical-Documentation-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  prompts.py  schemas.py
app/api/: routes.py
app/graph/: nodes.py  state.py  workflow.py
app/ingestion/: chunker.py  ingest.py  loader.py
app/retriever/: retriever.py
data/raw/: fastapi_basics.md  langgraph_basics.md  vector_databases_basics.md
tests/: test_api.py
