[project]
name = "rag-assistant"
version = "0.1.0"
description = "RAG Technical Documentation Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-chroma>=1.1.0",
    "groq>=0.37.1",
    "langchain-groq>=1.1.3",
    "pypdf>=6.14.2",
    "black>=26.5.1",
    "ruff>=0.15.22",
    "pytest>=9.1.1",
    "langchain-huggingface>=1.2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
